# flesh

./: .devenv.flake.nix  .envrc  .gitignore  Cargo.toml  README.md  build.rs  devenv.nix  flake.nix  logs  package.nix  statuses.csv
.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-2-link  shell-3-link
.devenv/state/cargo-install/: .crates.toml  .crates2.json
.github/workflows/: rust.yml
crates/flesh/: Cargo.toml
crates/flesh/src/: events.rs  lib.rs  main.rs
crates/flesh/src/modes/: mod.rs
crates/flesh/src/transport/: encoding.rs  mod.rs
crates/manager/: Cargo.toml
crates/manager/src/: app.rs  lib.rs
demo/: Cargo.toml
demo/app/: package-lock.json  package.json
demo/app/src/: api.tsx  main.tsx
demo/src/: main.rs  widgets.rs
examples/chat-vite/: Cargo.toml  package.nix
examples/chat-vite/app/src/: chat.tsx
examples/demo_chat-app/: Cargo.toml
examples/demo_chat-app/app/src/: main.css
examples/network/: Cargo.toml
examples/network/app/: package-lock.json  package.json
examples/network/app/app/login/: page.tsx
examples/network/app/components/: login-form.tsx
examples/network/src/: lib.rs
src/: events.rs  lib.rs  main.rs
src/mesh/: mod.rs  resolving.rs  table.rs
src/modes/: lora.rs
src/resolution/: encoding.rs  mod.rs  resolver.rs
src/transport/: encoding.rs  lora.rs  mod.rs  network.rs  status.rs  udp.rs
