[package]
name = "flesh"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = "2.0.1"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fl_uid = { version = "0.1.1", features = ["serde"] }
from_form = "0.2.2"
futures = "0.3.31"
lzma-rs = "0.3.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10"
tokio-tungstenite = "0.27.0"
socket2 = "0.6.0"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
lora-phy = "3.0.1"
anyhow = "1.0.100"
serialport = "4.7.3"
atat = { version = "0.24.1", features = ["heapless", "log"] }
atat_derive = "0.24.1"
heapless = "0.9.1"
nb = "1.1.0"
tokio-serial = "5.4.5"
embedded-io-adapters = { version = "0.6.2", features = ["tokio-1"] }
static_cell = "2.1.1"
