[package]
name = "flesh"
version = "0.1.0"
edition = "2024"
description = "Flora's LowRes Extensible Super Highway"
license = "MIT"

[dependencies]
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fl_uid = { version = "0.1.1", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10"
tracing = "0.1.41"
anyhow = "1.0.100"
tokio-serial = "5.4.5"
postcard = { version = "1.1.3", features = ["alloc"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
bytes = "1.10.1"
