[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
crossterm = "0.29.0"
fl_uid = "0.1.3"
futures = "0.3.31"
futures-signals = "0.3.34"
itertools = "0.14.0"
ratatui = "0.29.0"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
termion = "4.0.5"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = "0.3.20"

[dependencies.flesh]
path = ".."
