[package]
name = "manager"
version = "0.0.12"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
fl_uid = { version = "0.1.1", features = ["serde"] }
futures = "0.3.31"
serde = { version = "1.0.226", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
rand_core = { version = "0.6", features = ["std"] }
chacha20poly1305 = "0.10"
tracing = "0.1.41"
anyhow = "1.0.100"
tokio-serial = "5.4.5"
postcard = { version = "1.1.3", features = ["alloc"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
bytes = "1.10.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
clap = { version = "4.5.48", features = ["derive"] }
toml = "0.9.7"
indicatif = "0.18.0"
rubicon = "3.4.9"
spinoff = { version = "0.8.0", features = ["clock"] }
owo-colors = "4.2.3"
tokio-stream = "0.1.17"
libloading = "0.8.9"
rand = "0.9.2"
port_check = "0.3.0"
fork = "0.2.0"
signal-hook = "0.3.18"
serde_json = "1.0.145"

[dependencies.flesh]
path = "..//flesh"
